--- a/exer05/index.html
+++ b/exer05/index.html
@@ -9,9 +9,8 @@
   <body>
     <h1>Pagina 18 (Rei da babilonia)</h1>
     <p>
-      escreva um algoritmo para ler o número total de eleitores de um município,
-      o número de votos brancos, nulos e válidos. calcule e escreva o percentual
-      que cada um representa em relação ao total de eleitores;
+      escreva um algoritmo para ler o salario mensal atual de um funcionario e o
+      percentual de reajuste. calcular e escrever o valor do novo salario
     </p>
     <script src="./script.js"></script>
   </body>
