--- a/exer07/index.html
+++ b/exer07/index.html
@@ -7,14 +7,14 @@
     <title>exercicio 04</title>
   </head>
   <body>
+    0
     <h1>pagina 25 rei da babilonia</h1>
 
     <p>
-      uma revendedora de carros usandos paga a seus funcionarios vendendores um
-      salario fixo por mes, mais uma comissao fixa por carro vendido e mais 5%
-      sobre o total de vendas efetuadas. escreva um algoritmo que leia o numero
-      de carros vendidos, o valor de vendas. o valor que ele recebe por cada
-      carro e o salario fixo e calcele o salario do mesmo
+      faca um algoritmo que leia tres notas de um aluno, calcule e escreva a
+      media final deste aluno. considere que a media é poderada e que o peso das
+      notas é 2, 3 e 5. formula para o calculo: media final = N1 * 2 N2 * 3 = N3
+      * 5 / 10
     </p>
     <script src="./script.js"></script>
   </body>
