--- a/exer08/index.html
+++ b/exer08/index.html
@@ -7,14 +7,12 @@
     <title>exercicio 04</title>
   </head>
   <body>
+    0
     <h1>pagina 25 rei da babilonia</h1>
 
     <p>
-      uma revendedora de carros usandos paga a seus funcionarios vendendores um
-      salario fixo por mes, mais uma comissao fixa por carro vendido e mais 5%
-      sobre o total de vendas efetuadas. escreva um algoritmo que leia o numero
-      de carros vendidos, o valor de vendas. o valor que ele recebe por cada
-      carro e o salario fixo e calcele o salario do mesmo
+      ler um valor e escrever "o valor é maior que 10", caso o valor informado
+      seja maior que 10, caso contrario onforma valor menos que 10
     </p>
     <script src="./script.js"></script>
   </body>
