--- a/exer12/index.html
+++ b/exer12/index.html
@@ -16,6 +16,32 @@
       atual for maior ou igual a zero e escrever a mensagem saldo positivo, ou
       negativo
     </p>
+
+    REcursos javascript a documentação do React pressupõe alguma familiiaridade
+    com a programação na linguagem javascript. você não precisa ser um
+    especialista, mas é mais difícil aprender react e javascript ao mesmo
+    temporar o recomendamos passar esta visão geral do javascript para verificar
+    seu nível de conhecimento lecará entre 30 minutos e uma hora mas você se
+    sentirá mais confiante ao aprender o react dica sempre que você ficar
+    confuso com algo em javascrpt mdn e saão ótimos sites para verificar.
+    existem tam vém fóruns de suporte da comunidade onde vocề pode pedir ajuda
+    tutorial pratico se você predere aprender fazendo. confira nosso tutorial
+    pratico. neste tutorial construimos um jogo da velha no react você pode
+    ficar tentado a ignorá-lo porque não gosta de criar jogos mas de uma chance
+    as tecnocas que vcocê aprender[a no tutorial são findamentais para cria
+    qualquwr aplicatico react e dominla las fornecerá uma comprenesão muito mais
+    profunda guia passo a passo se você preferir aprender conceitos passo a
+    passo nosso guia de conceitos pricipais é o melhor luga para começar cada
+    capítulo seguinte se baseia no conhenhecimento introdizido nos capitulos
+    anteriore para que você mão perca nada Pa medida que avança pensando em
+    reagir muitos asuários do react creditam a leitura do thinking in react como
+    o momento em que o react finalmente clicu para ele é provavelmente o passo a
+    passo mais antigo do react mas ainda é relevanteconceitos avançadis uma vez
+    que você esteja confortavel com os conceitos principais e tenha jogado um
+    pouco com o react vocpe pode se interessar por topicos mais avançados esta
+    seção apresentrá a vocÇe os recursos poderosos mas menos usados ro react
+    como contrc we
+
     <script src="./script.js"></script>
   </body>
 </html>
