--- a/exer21/index.html
+++ b/exer21/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>exercicio 20</title>
+    <title>exercicio 21</title>
   </head>
   <body>
     0
     <h1>pagina 36 rei da babilonia</h1>
 
     <p>
-      escreva um algoritmo para imprimir os numeros de 1 inclusive a 10 em ordem
-      crescente
+      escreva um algoritmo para imprimir os números de 1 (inclusive) a 10
+      (inclusive) em ordem decrescente
     </p>
 
     <script src="./script.js"></script>
