--- a/exer24/index.html
+++ b/exer24/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>exercicio 23</title>
+    <title>exercicio 24</title>
   </head>
   <body>
     <h1>pagina 36 rei da babilonia</h1>
 
-    <p>escreva o algoritmo que calcule e imprima a tabuada do 8 (1 a 10)</p>
+    <p>
+      Escreva um algoritmo para imprimir os números de 1 (inclusive) 10
+      (inclusive) em ordem crescente. Utilizando REPITA/FAÇA e um contador
+    </p>
 
     <script src="./script.js"></script>
   </body>
