--- a/exer28/index.html
+++ b/exer28/index.html
@@ -9,7 +9,9 @@
   <body>
     <h1>pagina 36 rei da babilonia</h1>
 
-    <p></p>
+    <p>
+      Ler 10 valores calcular e escrever a média aritmética desses valores lidos
+    </p>
 
     <script src="./script.js"></script>
   </body>
